force-app/main/default/objects/Producto_de_paciente__c/Producto_de_paciente__c.object-meta.xml
<CustomObject>
    <label>Producto de paciente</label>
    <nameField>
        <displayFormat>PDP-{0000}</displayFormat>
        <label>Nro de Producto de paciente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de paciente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>