force-app/main/default/objects/Producto_de_paciente__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Care</fullName>
            </value>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Otra SND</fullName>
            </value>
            <value>
                <fullName>Particular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>