force-app/main/default/objects/Producto_de_paciente__c/fields/Cantidad_de_d_as_en_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_d_as_en_tratamiento__c</fullName>
    <formula>IF( ISBLANK(Fecha_de_inicio__c),IF( Productos_Activos__c = True, TODAY()- DATEVALUE(CreatedDate), Fecha_de_fin__c-DATEVALUE(CreatedDate)),IF( Productos_Activos__c = True, TODAY()-Fecha_de_inicio__c , Fecha_de_fin__c-Fecha_de_inicio__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de días en tratamiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>