force-app/main/default/objects/Producto_de_paciente__c/fields/Cantidad_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_producto__c</fullName>
    <label>Cantidad de producto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>