force-app/main/default/objects/Producto_de_paciente__c/fields/Cuenta_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_de_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta de Producto</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Best Care</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Regular</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Productos de paciente</relationshipLabel>
    <relationshipName>Productos_de_paciente</relationshipName>
    <type>Lookup</type>
</CustomField>