force-app/main/default/objects/Producto_de_paciente__c/fields/Estado_cobertura__c.field-meta.xml
<CustomField>
    <fullName>Estado_cobertura__c</fullName>
    <label>Estado cobertura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En tratamiento</fullName>
            </value>
            <value>
                <fullName>En seguimiento</fullName>
            </value>
            <value>
                <fullName>No tratamiento</fullName>
            </value>
            <value>
                <fullName>Fin de tratamiento</fullName>
            </value>
            <value>
                <fullName>Excluido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>