force-app/main/default/objects/Producto_de_paciente__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formula</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.Producto_SAP__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.ProductCode</field>
            <operation>equals</operation>
            <value>COMP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de paciente</relationshipLabel>
    <relationshipName>Productos_de_paciente</relationshipName>
    <type>Lookup</type>
</CustomField>