force-app/main/default/objects/Producto_de_paciente__c/fields/Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Laboratorio__c</fullName>
    <description>No se usa</description>
    <label>Laboratorio (No se usa)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>