force-app/main/default/objects/Producto_de_paciente__c/fields/Producto_activo__c.field-meta.xml
<CustomField>
    <fullName>Producto_activo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Producto activo</label>
    <type>Checkbox</type>
</CustomField>