force-app/main/default/objects/Producto_de_paciente__c/fields/Producto_Portal_Pacientes__c.field-meta.xml
<CustomField>
    <fullName>Producto_Portal_Pacientes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto con filtros para el portal de pacientes</description>
    <label>Producto Portal Pacientes</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Es_de_Kit_de_Inicio__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.Area_Terapeutica__c</field>
            <operation>equals</operation>
            <value>Dieta Cetogénica, Oncología, Metabólicos, Alergia, Digestivos</value>
        </filterItems>
        <filterItems>
            <field>Product2.Unidades_de_Kit__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>Product2.Organizacion__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de paciente (Producto Portal Pacientes)</relationshipLabel>
    <relationshipName>Productos_de_paciente1</relationshipName>
    <type>Lookup</type>
</CustomField>