force-app/main/default/objects/Producto_de_paciente__c/fields/Productos_activos__c.field-meta.xml
<CustomField>
    <fullName>Productos_activos__c</fullName>
    <formula>ISPICKVAL(Estado_cobertura__c, &quot;En tratamiento&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto activo</label>
    <type>Checkbox</type>
</CustomField>