force-app/main/default/objects/Producto_de_paciente__c/fields/Renovacion_de_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Renovacion_de_tratamiento__c</fullName>
    <label>Renovación de tratamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cada mes</fullName>
            </value>
            <value>
                <fullName>Cada 2 meses</fullName>
            </value>
            <value>
                <fullName>Cada 3 meses</fullName>
            </value>
            <value>
                <fullName>Cada 6 meses</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>