force-app/main/default/objects/Producto_de_paciente__c/fields/Subestado_cobertura__c.field-meta.xml
<CustomField>
    <fullName>Subestado_cobertura__c</fullName>
    <label>Subestado cobertura</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Estado_cobertura__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tratamiento efectivo</fullName>
            </value>
            <value>
                <fullName>Cobertura Parcial con Consumo REG</fullName>
            </value>
            <value>
                <fullName>Negativa de la obra social con consumo</fullName>
            </value>
            <value>
                <fullName>Internado REG</fullName>
            </value>
            <value>
                <fullName>En desafío REG</fullName>
            </value>
            <value>
                <fullName>En seguimiento de ONG</fullName>
            </value>
            <value>
                <fullName>Tramite iniciado</fullName>
            </value>
            <value>
                <fullName>Sin documentacion</fullName>
            </value>
            <value>
                <fullName>Tramite no iniciado</fullName>
            </value>
            <value>
                <fullName>En evaluación médica</fullName>
            </value>
            <value>
                <fullName>No tolera</fullName>
            </value>
            <value>
                <fullName>Se rehusa</fullName>
            </value>
            <value>
                <fullName>Negativa de la obra social sin consumo</fullName>
            </value>
            <value>
                <fullName>Con otro laboratorio por obra social</fullName>
            </value>
            <value>
                <fullName>Con otro laboratorio por profesional</fullName>
            </value>
            <value>
                <fullName>Suspensión permanente por indicación médica</fullName>
            </value>
            <value>
                <fullName>Alta de tratamiento</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Imposible de contactar</fullName>
            </value>
            <value>
                <fullName>Migrado erroneamente</fullName>
            </value>
            <value>
                <fullName>No contactar Solicitud del paciente</fullName>
            </value>
            <value>
                <fullName>No contactar Solicitud del profesional</fullName>
            </value>
            <value>
                <fullName>Falso positivo</fullName>
            </value>
            <value>
                <fullName>No iniciará tratamiento</fullName>
            </value>
            <value>
                <fullName>Fin de Journey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>