force-app/main/default/objects/Producto_de_paciente__c/fields/Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tratamiento</label>
    <referenceTo>Tratamiento__c</referenceTo>
    <relationshipLabel>Productos de paciente</relationshipLabel>
    <relationshipName>Productos_de_paciente</relationshipName>
    <type>Lookup</type>
</CustomField>